@@ -46,6 +46,7 @@ Version 1.3.12+svn:
    * units spawned with unit in events can now have random traits and also the
      names are the same (bug #10501)
    * load the recall list with a start of scenario save (bug #10444)
+   * Added support for side specific [message] (fr #7427)
  * miscellaneous and bug fixes:
    * various bug fixes and code cleanups
    * added gzip and gunzip command line parameters
